--- a/Project2/Base.lproj/Main.storyboard
+++ b/Project2/Base.lproj/Main.storyboard
@@ -1,24 +1,161 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="C35-pE-wLT">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="Kailasa.ttc">
+            <string>Kailasa-Bold</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Project2" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9Wr-eW-tyj">
+                                <rect key="frame" x="88" y="100" width="200" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="TwF-l5-2S3"/>
+                                    <constraint firstAttribute="width" constant="200" id="Yik-1u-RzD"/>
+                                </constraints>
+                                <state key="normal" image="us">
+                                    <attributedString key="attributedTitle">
+                                        <fragment content="Button">
+                                            <attributes>
+                                                <font key="NSFont" metaFont="system" size="15"/>
+                                            </attributes>
+                                        </fragment>
+                                    </attributedString>
+                                </state>
+                                <connections>
+                                    <action selector="buttonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="S3N-am-FV7"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="hzC-cE-S3l">
+                                <rect key="frame" x="88" y="230" width="200" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="200" id="0m2-0H-n30"/>
+                                    <constraint firstAttribute="height" constant="100" id="iwg-qb-dHW"/>
+                                </constraints>
+                                <state key="normal" image="us">
+                                    <attributedString key="attributedTitle">
+                                        <fragment content="Button">
+                                            <attributes>
+                                                <font key="NSFont" metaFont="system" size="15"/>
+                                            </attributes>
+                                        </fragment>
+                                    </attributedString>
+                                </state>
+                                <connections>
+                                    <action selector="buttonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="seB-yP-Jv0"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wy5-uq-8r8">
+                                <rect key="frame" x="88" y="360" width="200" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="200" id="coh-cr-LLb"/>
+                                    <constraint firstAttribute="height" constant="100" id="eNO-Z3-bxv"/>
+                                </constraints>
+                                <state key="normal" image="us">
+                                    <attributedString key="attributedTitle">
+                                        <fragment content="Button">
+                                            <attributes>
+                                                <font key="NSFont" metaFont="system" size="15"/>
+                                            </attributes>
+                                        </fragment>
+                                    </attributedString>
+                                </state>
+                                <connections>
+                                    <action selector="buttonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="mfH-g2-Z5T"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="qz6-e3-DA4">
+                                <rect key="frame" x="87" y="496" width="200" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="KRV-6u-CcX"/>
+                                    <constraint firstAttribute="width" constant="200" id="j6z-dG-2GN"/>
+                                </constraints>
+                                <state key="normal" image="us">
+                                    <attributedString key="attributedTitle">
+                                        <fragment content="Button">
+                                            <attributes>
+                                                <font key="NSFont" metaFont="system" size="15"/>
+                                            </attributes>
+                                        </fragment>
+                                    </attributedString>
+                                </state>
+                                <connections>
+                                    <action selector="buttonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="7hP-xN-baZ"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Score: 0" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vgd-lA-MPm">
+                                <rect key="frame" x="305.5" y="68" width="69.5" height="22"/>
+                                <fontDescription key="fontDescription" name="Kailasa-Bold" family="Kailasa" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="hzC-cE-S3l" firstAttribute="top" secondItem="9Wr-eW-tyj" secondAttribute="bottom" constant="30" id="Eyn-ew-7Zk"/>
+                            <constraint firstItem="wy5-uq-8r8" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="K00-Ha-NDF"/>
+                            <constraint firstItem="hzC-cE-S3l" firstAttribute="centerX" secondItem="9Wr-eW-tyj" secondAttribute="centerX" id="K9o-JY-Jm2"/>
+                            <constraint firstItem="wy5-uq-8r8" firstAttribute="centerX" secondItem="hzC-cE-S3l" secondAttribute="centerX" id="Ku2-iU-QCZ"/>
+                            <constraint firstItem="Vgd-lA-MPm" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="4" id="VD6-B4-mzi"/>
+                            <constraint firstItem="Vgd-lA-MPm" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="f94-Kw-Gev"/>
+                            <constraint firstItem="wy5-uq-8r8" firstAttribute="top" secondItem="hzC-cE-S3l" secondAttribute="bottom" constant="30" id="gys-kp-XUd"/>
+                            <constraint firstItem="9Wr-eW-tyj" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="36" id="jCS-WK-69y"/>
+                            <constraint firstItem="qz6-e3-DA4" firstAttribute="top" secondItem="wy5-uq-8r8" secondAttribute="bottom" constant="36" id="jW5-kr-jJe"/>
+                            <constraint firstItem="hzC-cE-S3l" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="tk3-ik-MoE"/>
+                            <constraint firstItem="9Wr-eW-tyj" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="z84-An-t8P"/>
+                            <constraint firstItem="qz6-e3-DA4" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="zUQ-t0-lX5"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" id="1O9-Fj-Ogi"/>
+                    <connections>
+                        <outlet property="button1" destination="9Wr-eW-tyj" id="44b-8C-3ej"/>
+                        <outlet property="button2" destination="hzC-cE-S3l" id="DqH-UX-PLJ"/>
+                        <outlet property="button3" destination="wy5-uq-8r8" id="7fw-Rb-oxu"/>
+                        <outlet property="button4" destination="qz6-e3-DA4" id="naZ-O7-jO3"/>
+                        <outlet property="scoreLabel" destination="Vgd-lA-MPm" id="gKf-Gc-4RF"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="773.60000000000002" y="133.5832083958021"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="V3U-Cw-gDi">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="C35-pE-wLT" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="EmJ-eQ-yu8">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="vwY-vl-Hqv"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="byx-q5-ull" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="50" y="134"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="us" width="200" height="100"/>
+    </resources>
 </document>
